Fixed Mikaley and Nicks Map now displays with no white space

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -359,8 +359,8 @@ input[type=text]:focus {
 }
 
 #social { 
-  height: 4480px;
   width: 100%;
+  padding-bottom: 0;
 }
 
 #your {
